--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0",
+    "vue-chart-3": "^0.5.8",
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
