--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,8 @@
   "author": "gianantoniopini",
   "license": "UNLICENSED",
   "dependencies": {
+    "@vuelidate/core": "^2.0.0-alpha.26",
+    "@vuelidate/validators": "^2.0.0-alpha.22",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "core-js": "^3.6.5",
