--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,8 +24,7 @@
     "popper.js": "^1.16.1",
     "vue": "^3.0.0",
     "vue-chart-3": "^0.5.8",
-    "vue-router": "^4.0.11",
-    "vue3-date-time-picker": "^2.0.0"
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
