Added language matrix for CodeQL code scanning to all GitHub Actions workflows

--- a/.github/workflows/front-end.yml
+++ b/.github/workflows/front-end.yml
@@ -13,11 +13,17 @@ defaults:
 jobs:
   analyze:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ["javascript", "typescript"]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v1
+        with:
+          languages: ${{ matrix.language }}
       - name: Autobuild
         uses: github/codeql-action/autobuild@v1
       - name: Perform CodeQL Analysis
