external-api: added "jwt" to package.json keywords

--- a/external-api/package.json
+++ b/external-api/package.json
@@ -17,7 +17,8 @@
     "nodejs",
     "express",
     "rest",
-    "api"
+    "api",
+    "jwt"
   ],
   "author": "gianantoniopini",
   "license": "MIT",
