back-end: Jest setup with jest-mongodb

--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -1,4 +1,4 @@
-PORT=8080
+PORT="8080"
 BASE_PATH="/api/v1"
 MONGO_URI="mongodb://localhost:27017/mevn-stack-app_db"
 EXTERNAL_API_AUTH_URL="http://localhost:8083/api/v1/authentication/auth"
