--- a/back-end/.gitignore
+++ b/back-end/.gitignore
@@ -10,6 +10,12 @@ node_modules/
 # MongoDB data export files
 *.mongodb.json
 
+# File created by @shelf/jest-mongodb
+globalConfig.json
+
+# Code coverage
+coverage/
+
 # Links, Notes files
 links.txt
 notes.txt
