--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "description": "Node.js Restful API with Node.js, Express and MongoDB",
-  "main": "app/server.ts",
+  "main": "src/server.ts",
   "scripts": {
     "clean": "rimraf build",
     "build": "npm run clean && tsc --project ./",
     "lint": "eslint . --ext .ts",
-    "prettier-format": "prettier --config .prettierrc 'app/**/*.ts' --write",
-    "start": "nodemon app/server.ts",
-    "start:production": "ts-node build/app/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "start": "nodemon src/server.ts",
+    "start:production": "ts-node build/src/server.js",
+    "test": "jest"
   },
   "keywords": [
     "nodejs",
@@ -27,23 +27,30 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "got": "^11.8.2",
+    "http-status-codes": "^2.1.4",
     "mongoose": "^6.0.5",
     "tough-cookie": "^4.0.0",
     "util": "^0.12.4"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^2.1.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.3",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.9.1",
+    "@types/supertest": "^2.0.11",
     "@types/tough-cookie": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.4.3",
     "nodemon": "^2.0.12",
     "prettier": "^2.4.0",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
