--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,7 +11,7 @@
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "start": "nodemon src/server.ts",
     "start:production": "ts-node build/src/server.js",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "keywords": [
     "nodejs",
@@ -33,7 +33,6 @@
     "util": "^0.12.4"
   },
   "devDependencies": {
-    "@shelf/jest-mongodb": "^2.1.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
@@ -47,6 +46,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.3",
+    "mongodb-memory-server": "^8.0.4",
     "nodemon": "^2.0.12",
     "prettier": "^2.4.0",
     "supertest": "^6.1.6",
