--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,7 +11,7 @@
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "start": "nodemon src/server.ts",
     "start:production": "ts-node build/src/server.js",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand --verbose"
   },
   "keywords": [
     "nodejs",
