--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "bootstrap-icons": "^1.7.2",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
