--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/vue": "^6.4.2",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
