--- a/back-end/package.json
+++ b/back-end/package.json
@@ -45,6 +45,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-unicorn": "^39.0.0",
     "jest": "^27.4.3",
     "mongodb-memory-server": "^8.0.4",
     "nodemon": "^2.0.12",
