--- a/external-api/package.json
+++ b/external-api/package.json
@@ -43,6 +43,7 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-sonarjs": "^0.11.0",
     "eslint-plugin-unicorn": "^39.0.0",
     "jest": "^27.3.1",
     "nodemon": "^2.0.13",
