--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "bootstrap-icons": "^1.7.2",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
+    "mosha-vue-toastify": "^1.0.23",
     "vue": "^3.0.0",
     "vue-chart-3": "^3.0.4",
     "vue-router": "^4.0.11"
