--- a/front-end/package.json
+++ b/front-end/package.json
@@ -39,6 +39,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-jest-dom": "^3.9.2",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-sonarjs": "^0.11.0",
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
     "typescript": "~4.1.5",
