--- a/front-end/package.json
+++ b/front-end/package.json
@@ -37,6 +37,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^6.7.2",
+    "eslint-plugin-jest": "^25.3.4",
     "eslint-plugin-jest-dom": "^3.9.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-sonarjs": "^0.11.0",
