--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
+    "test:unit": "vue-cli-service test:unit --verbose",
     "lint": "vue-cli-service lint --no-fix",
     "serve:production": "http-server ./dist -p 0"
   },
