Changes as per repository rename from mevn-stack-app to meter-data-analytics

--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -1,6 +1,6 @@
 PORT="8080"
 BASE_PATH="/api/v1"
-MONGO_URI="mongodb://localhost:27017/mevn-stack-app_db"
+MONGO_URI="mongodb://localhost:27017/meter-data-analytics_db"
 EXTERNAL_API_AUTH_URL="http://localhost:8083/api/v1/authentication/auth"
 EXTERNAL_API_AUTH_EMAIL="noemail@noemail.com"
 EXTERNAL_API_AUTH_PWD="password"
