--- a/front-end/package.json
+++ b/front-end/package.json
@@ -36,12 +36,14 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "axios-mock-adapter": "^1.20.0",
     "eslint": "^6.7.2",
     "eslint-plugin-jest": "^25.3.4",
     "eslint-plugin-jest-dom": "^3.9.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-sonarjs": "^0.11.0",
     "eslint-plugin-vue": "^7.0.0",
+    "http-status-codes": "^2.2.0",
     "jest-canvas-mock": "^2.3.1",
     "prettier": "^2.2.1",
     "typescript": "~4.1.5",
