--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,7 +6,7 @@
   "main": "src/server.ts",
   "scripts": {
     "clean": "rimraf build",
-    "build": "npm run clean && tsc --project ./",
+    "build": "npm run clean && tsc --project tsconfig.build.json",
     "lint": "eslint . --ext .ts",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "start": "nodemon src/server.ts",
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^6.2.0",
     "got": "^11.8.2",
     "http-status-codes": "^2.1.4",
     "mongoose": "^6.0.5",
