--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -1,10 +1,3 @@
 {
-  "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "rootDir": "./",
-    "outDir": "./build",
-    "esModuleInterop": true,
-    "strict": true
-  }
+  "extends": "./tsconfig.base.json"
 }
