--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -13,7 +13,8 @@
     "baseUrl": ".",
     "types": ["webpack-env", "jest"],
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@shared/*": ["../shared/src/*"]
     },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
