--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -3,8 +3,8 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "./build",
-    "paths": { "@shared/*": ["../shared/src/*"] },
-    "esModuleInterop": true,
-    "strict": true
+    "declaration": true,
+    "declarationMap": true,
+    "composite": true
   }
 }
