--- a/external-api/tsconfig.base.json
+++ b/external-api/tsconfig.base.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "rootDir": "./",
     "outDir": "./build",
+    "paths": { "@shared/*": ["../shared/src/*"] },
     "esModuleInterop": true,
     "strict": true
   }
