--- a/external-api/package.json
+++ b/external-api/package.json
@@ -9,8 +9,8 @@
     "build": "npm run clean && tsc --project tsconfig.build.json",
     "lint": "eslint . --ext .ts",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "start": "nodemon src/server.ts",
-    "start:production": "ts-node build/external-api/src/server.js",
+    "start": "nodemon --exec ts-node --require tsconfig-paths/register src/server.ts",
+    "start:production": "ts-node --require tsconfig-paths/register build/external-api/src/server.js",
     "test": "jest --runInBand --verbose"
   },
   "keywords": [
@@ -53,6 +53,7 @@
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.3.0",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.4.4"
   }
 }
