--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "mosha-vue-toastify": "^1.0.23",
     "vue": "^3.0.0",
     "vue-chart-3": "^3.0.4",
+    "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
