--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,9 +19,10 @@
     "jquery": "^3.6.0",
     "mosha-vue-toastify": "^1.0.23",
     "vue": "^3.0.0",
-    "vue-chart-3": "^3.0.4",
+    "vue-chart-3": "^3.0.9",
     "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.11"
+    "vue-router": "^4.0.11",
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -33,6 +34,7 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
