--- a/back-end/package.json
+++ b/back-end/package.json
@@ -58,5 +58,8 @@
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.4.3"
+  },
+  "engines": {
+    "node": ">=12.0.0 <17.5.0"
   }
 }
