--- a/shared/package.json
+++ b/shared/package.json
@@ -22,5 +22,8 @@
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.5"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
