--- a/external-api/package.json
+++ b/external-api/package.json
@@ -55,5 +55,8 @@
     "ts-node": "^10.3.0",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.4.4"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
