--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,7 +20,7 @@
     "mosha-vue-toastify": "^1.0.23",
     "vue": "^3.0.0",
     "vue-chart-3": "^3.0.9",
-    "vue-i18n": "^9.1.9",
+    "vue-i18n": "^9.2.0-beta.30",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.0-0"
   },
