--- a/front-end/package.json
+++ b/front-end/package.json
@@ -30,7 +30,7 @@
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-babel": "~5.0.1",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
@@ -53,11 +53,11 @@
     "vue-cli-plugin-compression": "^1.1.5",
     "vue-jest": "^5.0.0-0"
   },
+  "engines": {
+    "node": ">=12.0.0 <17.0.0"
+  },
   "keywords": [
     "vue"
   ],
-  "license": "MIT",
-  "engines": {
-    "node": ">=12.0.0 <17.0.0"
-  }
+  "license": "MIT"
 }
