--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,44 +14,36 @@
   "dependencies": {
     "axios": "^0.21.4",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.7.2",
+    "bootstrap-icons": "^1.8.1",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "mosha-vue-toastify": "^1.0.23",
     "vue": "^3.0.0",
-    "vue-chart-3": "^3.0.9",
+    "vue-chart-3": "^3.1.0",
     "vue-i18n": "^9.2.0-beta.30",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/vue": "^6.4.2",
-    "@types/jest": "^24.0.19",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/vue": "^6.5.1",
+    "@types/jest": "^27.0.1",
     "@vue/cli-plugin-babel": "~5.0.1",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~5.0.0",
+    "@vue/cli-plugin-unit-jest": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.1",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "~5.0.1",
     "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
+    "@vue/test-utils": "^2.0.0-0",
+    "@vue/vue3-jest": "^27.0.0-alpha.1",
     "axios-mock-adapter": "^1.20.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-jest": "^25.3.4",
-    "eslint-plugin-jest-dom": "^3.9.2",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-sonarjs": "^0.11.0",
-    "eslint-plugin-vue": "^7.0.0",
+    "babel-jest": "^27.0.6",
     "http-status-codes": "^2.2.0",
+    "jest": "^27.0.5",
     "jest-canvas-mock": "^2.3.1",
-    "prettier": "^2.2.1",
-    "typescript": "^4.4.4",
-    "vue-cli-plugin-compression": "^1.1.5",
-    "vue-jest": "^5.0.0-0"
+    "ts-jest": "^27.0.4",
+    "typescript": "~4.5.5",
+    "vue-cli-plugin-compression": "^1.1.5"
   },
   "engines": {
     "node": ">=12.0.0 <17.0.0"
