--- a/front-end/package.json
+++ b/front-end/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-jest-dom": "^4.0.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-sonarjs": "^0.12.0",
+    "eslint-plugin-unicorn": "^39.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "http-status-codes": "^2.2.0",
     "jest": "^27.0.5",
