--- a/front-end/package.json
+++ b/front-end/package.json
@@ -59,7 +59,7 @@
     "vue-cli-plugin-compression": "^1.1.5"
   },
   "engines": {
-    "node": ">=12.0.0 <18.0.0"
+    "node": ">=12.0.0"
   },
   "keywords": [
     "vue"
