--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -4,11 +4,12 @@
     "module": "esnext",
     "strict": true,
     "jsx": "preserve",
-    "importHelpers": true,
     "moduleResolution": "node",
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "useDefineForClassFields": true,
     "resolveJsonModule": true,
     "sourceMap": true,
     "baseUrl": ".",
