--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,16 +18,15 @@
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "mosha-vue-toastify": "^1.0.23",
+    "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.31",
     "vue-chart-3": "^3.1.0",
     "vue-i18n": "^9.2.0-beta.30",
     "vue-router": "^4.0.11",
-    "vue3-date-time-picker": "^2.7.0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/user-event": "^14.0.0-beta",
     "@testing-library/vue": "^6.5.1",
     "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
