--- a/front-end-2/package.json
+++ b/front-end-2/package.json
@@ -13,8 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
+    "vue-i18n": "^9.3.0-beta.17",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
@@ -32,6 +35,7 @@
     "jsdom": "^22.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
+    "sass": "^1.62.1",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
     "vitest": "^0.31.0",
