--- a/front-end-2/package.json
+++ b/front-end-2/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "chart.js": "^4.3.0",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
+    "vue-chartjs": "^5.2.0",
     "vue-i18n": "^9.3.0-beta.17",
     "vue-router": "^4.2.0"
   },
