--- a/front-end-2/package.json
+++ b/front-end-2/package.json
@@ -13,14 +13,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.7",
+    "@vuepic/vue-datepicker": "^5.1.2",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "chart.js": "^4.3.0",
     "mosha-vue-toastify": "^1.0.23",
     "pinia": "^2.0.36",
-    "v-calendar": "^3.0.3",
     "vue": "^3.3.2",
     "vue-chartjs": "^5.2.0",
     "vue-i18n": "^9.3.0-beta.17",
