front-end-2: updated lint/prettier config

--- a/front-end-2/package.json
+++ b/front-end-2/package.json
@@ -9,8 +9,10 @@
     "test:unit": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
+    "lint-fix": "npm run lint -- --fix",
+    "prettier": "prettier --check .",
+    "prettier-fix": "prettier --write ."
   },
   "dependencies": {
     "@vuepic/vue-datepicker": "^5.1.2",
