--- a/front-end-2/package.json
+++ b/front-end-2/package.json
@@ -38,6 +38,7 @@
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.39.0",
+    "eslint-plugin-sonarjs": "^0.19.0",
     "eslint-plugin-vue": "^9.11.0",
     "jsdom": "^22.0.0",
     "npm-run-all": "^4.1.5",
