--- a/front-end-2/package.json
+++ b/front-end-2/package.json
@@ -38,10 +38,12 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.4.0",
+    "axios-mock-adapter": "^1.21.5",
     "eslint": "^8.39.0",
     "eslint-plugin-sonarjs": "^0.19.0",
     "eslint-plugin-unicorn": "^47.0.0",
     "eslint-plugin-vue": "^9.11.0",
+    "http-status-codes": "^2.2.0",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
@@ -49,6 +51,7 @@
     "typescript": "~5.0.4",
     "vite": "^4.3.9",
     "vitest": "^0.32.0",
+    "vitest-canvas-mock": "^0.3.2",
     "vue-tsc": "^1.6.5"
   }
 }
