--- a/front-end-2/tsconfig.app.json
+++ b/front-end-2/tsconfig.app.json
@@ -1,7 +1,7 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/**/*.json"],
-  "exclude": ["src/**/__tests__/*"],
+  "exclude": ["vitest/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
