--- a/front-end-2/package.json
+++ b/front-end-2/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "front-end-2",
-  "version": "0.0.0",
+  "name": "meter-data-analytics-front-end",
+  "version": "1.0.0",
   "private": true,
+  "description": "Vue app with TypeScript and Axios",
+  "author": "gianantoniopini",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
@@ -54,5 +56,12 @@
     "vitest": "^0.33.0",
     "vitest-canvas-mock": "^0.3.2",
     "vue-tsc": "^1.6.5"
-  }
+  },
+  "engines": {
+    "node": ">=18.16.0"
+  },
+  "keywords": [
+    "vue"
+  ],
+  "license": "MIT"
 }
