front-end-2: added engines.npm field to package.json, updated deps

--- a/front-end-2/package.json
+++ b/front-end-2/package.json
@@ -58,7 +58,8 @@
     "vue-tsc": "^1.6.5"
   },
   "engines": {
-    "node": ">=18.16.0"
+    "node": ">=18.16.0",
+    "npm": ">=9.5.1"
   },
   "keywords": [
     "vue"
