front-end-2: added local links.txt file

--- a/front-end-2/.gitignore
+++ b/front-end-2/.gitignore
@@ -16,7 +16,6 @@ node_modules
 .DS_Store
 dist
 dist-ssr
-coverage
 *.local
 
 /cypress/videos/
@@ -31,3 +30,9 @@ coverage
 *.njsproj
 *.sln
 *.sw?
+
+# Code coverage
+coverage
+
+# Links file
+links.txt
