front-end-2 -> front-end: replaced all contents in front-end directory with contents from front-end-2 directory

--- a/front-end/.env.example
+++ b/front-end/.env.example
@@ -1,3 +1,3 @@
-VUE_APP_DEV_SERVER_PORT=8082
-VUE_APP_BACK_END_API_BASE_URL="http://localhost:8080/api/v1"
-VUE_APP_DEFAULT_SMART_METER_ID="09a2bc02-2f88-4d01-ae59-a7f60c4a0dd1"
+SERVER_PORT=8082
+VITE_BACK_END_API_BASE_URL="http://localhost:8080/api/v1"
+VITE_DEFAULT_SMART_METER_ID="09a2bc02-2f88-4d01-ae59-a7f60c4a0dd1"
