--- a/front-end/.gitignore
+++ b/front-end/.gitignore
@@ -1,21 +1,30 @@
-.DS_Store
-node_modules
-/dist
-
-# environment files
+# Environment files
 .env
 .env.local
 .env.*.local
 
-# Log files
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+.DS_Store
+dist
+dist-ssr
+*.local
+
+/cypress/videos/
+/cypress/screenshots/
 
 # Editor directories and files
+.vscode/*
+!.vscode/extensions.json
 .idea
-.vscode
 *.suo
 *.ntvs*
 *.njsproj
@@ -23,7 +32,7 @@ pnpm-debug.log*
 *.sw?
 
 # Code coverage
-coverage/
+coverage
 
 # Links file
 links.txt
