--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,63 +5,61 @@
   "description": "Vue app with TypeScript and Axios",
   "author": "gianantoniopini",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit --verbose",
-    "lint": "vue-cli-service lint --no-fix",
-    "serve:production": "http-server ./dist --port 8082 --brotli --gzip --proxy http://localhost:8082?"
+    "dev": "vite",
+    "build": "run-p type-check build-only",
+    "preview": "vite preview",
+    "test:unit": "vitest",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
+    "lint-fix": "npm run lint -- --fix",
+    "prettier": "prettier --check .",
+    "prettier-fix": "prettier --write ."
   },
   "dependencies": {
-    "axios": "^0.21.4",
-    "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.8.1",
-    "core-js": "^3.6.5",
-    "jquery": "^3.6.0",
+    "@vuepic/vue-datepicker": "^5.4.0",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
+    "chart.js": "^4.3.0",
     "mosha-vue-toastify": "^1.0.23",
-    "v-calendar": "^3.0.0-alpha.8",
-    "vue": "^3.2.31",
-    "vue-chart-3": "^3.1.0",
-    "vue-i18n": "^9.2.0-beta.30",
-    "vue-router": "^4.0.11",
-    "vuex": "^4.0.0-0"
+    "pinia": "^2.1.3",
+    "vue": "^3.3.4",
+    "vue-chartjs": "^5.2.0",
+    "vue-i18n": "^9.3.0-beta.21",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/vue": "^6.5.1",
-    "@types/jest": "^27.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "~5.0.1",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-plugin-unit-jest": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.1",
-    "@vue/cli-service": "~5.0.1",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "@vue/test-utils": "^2.0.0-0",
-    "@vue/vue3-jest": "^27.0.0-alpha.1",
-    "axios-mock-adapter": "^1.20.0",
-    "babel-jest": "^27.0.6",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^26.1.1",
-    "eslint-plugin-jest-dom": "^4.0.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-sonarjs": "^0.12.0",
-    "eslint-plugin-unicorn": "^39.0.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "@rushstack/eslint-patch": "^1.2.0",
+    "@tsconfig/node18": "^2.0.1",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "^18.16.17",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitest/coverage-v8": "^0.33.0",
+    "@vitest/ui": "^0.33.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.3.2",
+    "@vue/tsconfig": "^0.4.0",
+    "axios-mock-adapter": "^1.21.5",
+    "eslint": "^8.39.0",
+    "eslint-plugin-sonarjs": "^0.19.0",
+    "eslint-plugin-unicorn": "^47.0.0",
+    "eslint-plugin-vue": "^9.11.0",
     "http-status-codes": "^2.2.0",
-    "jest": "^27.0.5",
-    "jest-canvas-mock": "^2.3.1",
-    "prettier": "^2.4.1",
-    "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5",
-    "vue-cli-plugin-compression": "^1.1.5"
+    "jsdom": "^22.1.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.8",
+    "sass": "^1.63.6",
+    "typescript": "~5.0.4",
+    "vite": "^4.3.9",
+    "vitest": "^0.33.0",
+    "vitest-canvas-mock": "^0.3.2",
+    "vue-tsc": "^1.6.5"
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=18.16.0",
+    "npm": ">=9.5.1"
   },
   "keywords": [
     "vue"
