--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,11 +23,11 @@
     "bootstrap-icons": "^1.11.2",
     "chart.js": "^4.4.1",
     "mosha-vue-toastify": "^1.0.23",
-    "pinia": "^2.1.3",
-    "vue": "^3.3.4",
+    "pinia": "^2.1.7",
+    "vue": "^3.3.13",
     "vue-chartjs": "^5.3.0",
-    "vue-i18n": "^9.3.0-beta.21",
-    "vue-router": "^4.2.2"
+    "vue-i18n": "^9.8.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
