front-end: fix warning related to Vite CJS Node API deprecated

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,6 +2,7 @@
   "name": "meter-data-analytics-front-end",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "description": "Vue app with TypeScript and Axios",
   "author": "gianantoniopini",
   "scripts": {
