--- a/front-end/tsconfig.app.json
+++ b/front-end/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/**/*.json"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/**/*.json", "tests/unit/**/*"],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
